Even more formatting, fixes for Linux functionality are now largely done